# cookiecutter-chic-pypackage

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  SECURITY.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: publish.yml  release-please.yml  test.yml
docs/: index.md  template_params.md  usage.md
history/: index.html
hooks/: post_gen_project.py
search/: search_index.json
template_params/: index.html
tests/: test_bake_package.py
usage/: index.html
{{ cookiecutter.__package_name_kebab_case }}/: Dockerfile  README.md  SECURITY.md  docker-compose.yml  mkdocs.yml  pyproject.toml
{{ cookiecutter.__package_name_kebab_case }}/docs/: api.md  installation.md  usage.md
